#=============================================================================
#
# CMake configuration file for the HelloWorld project
#
#=============================================================================
cmake_minimum_required(VERSION 3.13)

project(HelloWorld LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)

#=============================================================================
# Options
#=============================================================================
cmake_policy(SET CMP0077 NEW)

add_compile_options("--coverage" "-O0")
add_link_options("--coverage")

#=============================================================================
# HelloWorld library
#=============================================================================
add_subdirectory(src/HelloWorld)

#=============================================================================
# Tests
#=============================================================================
add_subdirectory(demos)
